--- a/src/main/webapp/layout/banner.zul
+++ b/src/main/webapp/layout/banner.zul
@@ -2,7 +2,7 @@
 	<hbox hflex="1" vflex="1" align="center">
 		<image src="/zklogo.png" width="90px"  />
 		<hbox hflex="1" vflex="1" pack="end" align="end" style="">
-			<button label="login"/>
+			<button label="Login"/>
 		</hbox>
 	</hbox>
 </div>
