--- a/src/main/webapp/index.zul
+++ b/src/main/webapp/index.zul
@@ -9,7 +9,7 @@
 		</west>
 		<center autoscroll="true">
 			<vbox vflex="1" hflex="1" align="center" pack="center" spacing="20px" >
-				<image src="/zklogo2.png" />
+				<image src="/imgs/zklogo2.png" />
 				<label value="Welcome to ZK Tutorial 2012" sclass="head1"/>
 			</vbox>
 		</center>
