--- a/src/main/webapp/layout/banner.zul
+++ b/src/main/webapp/layout/banner.zul
@@ -1,8 +1,11 @@
 <div hflex="1" vflex="1" sclass="banner">
 	<hbox hflex="1" vflex="1" align="center">
-		<image src="/zklogo.png" width="90px"  />
+		<a href="http://www.zkoss.org/">
+			<image src="/imgs/zklogo.png" width="90px" />
+		</a>
+		<label value="Application Name" sclass="banner-head"/>
 		<hbox hflex="1" vflex="1" pack="end" align="end" style="">
-			<button label="Login"/>
+			<button label="Login" onClick='alert("Ooops, does not ready yet")'/>
 		</hbox>
 	</hbox>
 </div>
