--- a/src/main/webapp/style.css
+++ b/src/main/webapp/style.css
@@ -36,8 +36,7 @@
 	color:#636363;
 }
 
-.fn-caption{
-	padding-left: 10px;
+.fn-caption .z-caption-l{
 	font-weight: bold;
 	font-size: medium;
 	color: #636363;
