--- a/src/main/webapp/style.css
+++ b/src/main/webapp/style.css
@@ -6,6 +6,10 @@
 .banner-head{
 	font-size: 2.4em;
 }
+.banner .logout{
+	text-decoration: underline;
+	cursor: pointer;
+} 
 
 .footer {
 	background-color:#102d35;
