remove links for chapter 3 ~ chapter 7

--- a/src/main/webapp/index.zul
+++ b/src/main/webapp/index.zul
@@ -5,36 +5,8 @@
 			<include src="/chapter3/banner.zul"/>
 		</north>
 		<center id="mainContent" autoscroll="true">
-			<vbox vflex="1" hflex="1" align="center" spacing="20px"  sclass="demo-main">
+			<vbox vflex="1" hflex="1" align="center" pack="center" spacing="20px"  sclass="demo-main">
 				<label value="Welcome to ZK Tutoial" sclass="head1"/>
-				<label value="Chapter 3 - User Interface and Layout" sclass="head2"/>
-				<hlayout>
-					<a href="/chapter3/">Demo</a>
-				</hlayout>
-				
-				<label value="Chapter 4 - Controlling Components" sclass="head2"/>
-				<hlayout>
-					<a href="/chapter4/index-zscript.zul">ZScript</a>
-					<a href="/chapter4/index.zul">Java</a>
-				</hlayout>
-				
-				<label value="Chapter 5 - Handling User Input" sclass="head2"/>
-				<hlayout>
-					<a href="/chapter5/index.zul">MVC</a>
-					<a href="/chapter5/index-mvvm.zul">MVVM</a>
-				</hlayout>
-				
-				<label value="Chapter 6 - Implementing CRUD" sclass="head2"/>
-				<hlayout>
-					<a href="/chapter6/index.zul">MVC</a>
-					<a href="/chapter6/index-mvvm.zul">MVVM</a>
-				</hlayout>
-				
-				<label value="Chapter 7 - Navigation and Templating" sclass="head2"/>
-				<hlayout>
-					<a href="/chapter7/pagebase/index.zul">Page base</a>
-					<a href="/chapter7/single/index.zul">Single desktop</a>
-				</hlayout>
 				
 				<label value="Chapter 8 - Authentication" sclass="head2"/>
 				<hlayout>
