rename (SingleDesktop -> Ajaxbase) including package name, class name, and folder name.

--- a/src/main/webapp/index.zul
+++ b/src/main/webapp/index.zul
@@ -33,7 +33,7 @@
 				<label value="Chapter 7" sclass="head2"/>
 				<hlayout>
 					<a href="/chapter7/pagebase/index.zul">Page-based</a>
-					<a href="/chapter7/single/index.zul">AJAX-based</a>
+					<a href="/chapter7/ajaxbase/index.zul">AJAX-based</a>
 				</hlayout>
 				
 				<label value="Chapter 8" sclass="head2"/>
