--- a/src/main/webapp/index.zul
+++ b/src/main/webapp/index.zul
@@ -7,38 +7,39 @@
 		<center id="mainContent" autoscroll="true">
 			<vbox vflex="1" hflex="1" align="center" spacing="20px"  sclass="demo-main">
 				<label value="Welcome to ZK Essentials" sclass="head1"/>
-				<label value="Chapter 3" sclass="head2"/>
+				<label value="Chapter 1" sclass="head2"/>
 				<hlayout>
 					<a href="/chapter1/">Demo</a>
 				</hlayout>
 				
-				<label value="Chapter 4" sclass="head2"/>
+				<label value="Chapter 2" sclass="head2"/>
 				<hlayout>
 					<a href="/chapter2/index-zscript.zul">ZScript</a>
 					<a href="/chapter2/index.zul">Java</a>
 				</hlayout>
 				
-				<label value="Chapter 5" sclass="head2"/>
+				<label value="Chapter 3" sclass="head2"/>
 				<hlayout>
 					<a href="/chapter3/index.zul">MVC</a>
 					<a href="/chapter3/index-mvvm.zul">MVVM</a>
 				</hlayout>
 				
-				<label value="Chapter 6" sclass="head2"/>
+				<label value="Chapter 4" sclass="head2"/>
 				<hlayout>
 					<a href="/chapter4/index.zul">MVC</a>
 					<a href="/chapter4/index-mvvm.zul">MVVM</a>
 				</hlayout>
 				
-				<label value="Chapter 7" sclass="head2"/>
+				<label value="Chapter 6" sclass="head2"/>
 				<hlayout>
-					<a href="/chapter7/pagebased/index.zul">Page-based</a>
-					<a href="/chapter7/ajaxbased/index.zul">AJAX-based</a>
+					<a href="/chapter6/pagebased/index.zul">Page-based</a>
+					<a href="/chapter6/ajaxbased/index.zul">AJAX-based MVC</a>
+					<a href="/chapter6/ajaxbased_mvvm/index.zul">AJAX-based MVVM</a>
 				</hlayout>
 				
-				<label value="Chapter 8" sclass="head2"/>
+				<label value="Chapter 7" sclass="head2"/>
 				<hlayout>
-					<a href="/chapter8/index.zul">Demo</a>
+					<a href="/chapter7/index.zul">Demo</a>
 				</hlayout>
 				
 			</vbox>
