fix link to chapter5 index page

--- a/src/main/webapp/index.zul
+++ b/src/main/webapp/index.zul
@@ -31,7 +31,7 @@
 				</hlayout>
 				<label value="Chapter 5" sclass="head2"/>
 				<hlayout>
-					<a href="/chapter5/menu.zul">MVVM</a>
+					<a href="/chapter5/index.zul">MVVM</a>
 				</hlayout>
 				
 				<label value="Chapter 6" sclass="head2"/>
